k8s/auth-mongo-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
  namespace: webapps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
  namespace: webapps
spec:
  selector:
    app: auth-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017


    apiVersion: v1
kind: Secret
metadata:
  name: auth-mongo
type: Opaque
data:
  JWT_KEY: S2F2aW5kdQo=
