k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: webapps
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ticket.dev
      http:
        paths:
          - pathType: Prefix
            path: /api/users/?(.*)
            backend:
              service:
                name: auth-srv
                port:
                  number: 80
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: client-srv
                port:
                  number: 80
    - host: ticket.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: default-http-backend
                port:
                  number: 80
